2012-08-31  Glenn Randers-Pehrson  <glennrp@simplesystems.org> 

	* coders/png.c: ReadOnePNGImage: sub-8-bit palette images were
	getting unpacked twice; once by libpng via png_set_packing()
	and again by coders/png.c in a switch() statement around line 2500,
	resulting in horizontally stretched pixels.

2012-08-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Makefile.am (AUTOMAKE_OPTIONS): Include lzip as a distribution
	format again.

2012-08-26  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: BrowseDelegate now defaults to 'xdg-open', but if
	it is not found, then configure will search for firefox,
	google-chrome, mozilla (in that order).

2012-08-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac: For testing on MinGW, assume that Postscript is
	available since we don't have a good way to check for that.

	* scripts/tap-functions.shi (test_count): Always execute the test
	program rather than skipping execution since we want to make sure
	the test program fails correctly as well.

	* coders/gif.c (DecodeImage): Add a log message for attempted LZW
	string data table overflow.

2012-08-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/effect.c (ConvolveImage): Allocate normalized convolution
	kernel using cache-line aligned memory allocator.

	* configure.ac: Remove support for legacy LZWDecodeDelegate and
	LZWEncodeDelegate since these are not used any more.

2012-08-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* scripts/tap-functions.shi: If a test declares that it needs
	certain features, skip the test if required features are not
	available.

	* configure.ac: Build a supported features list and save to
	common.shi script for use by test scripts.

	* Makefile.am (LOG_COMPILER): Run Bourne-shell based TAP scripts
	with the same shell $(SHELL) that configure selected for the
	Makefile to use.

2012-08-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
