@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020120831"
-#define public MagickPackageReleaseDate "snapshot-20120831"
+#define public MagickPackageVersionAddendum ".020120901"
+#define public MagickPackageReleaseDate "snapshot-20120901"
