@@ -36,6 +36,14 @@
 <div class="document">
 
 
+<p>2012-09-01  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/wmf.c (lite_font_stringwidth): Simply return zero.
+Returning a computed string width was causing text placement
+problems when testing with libwmf's fulltest.wmf.</li>
+</ul>
+</blockquote>
 <p>2012-08-31  Glenn Randers-Pehrson  &lt;<a class="reference external" href="mailto:glennrp&#37;&#52;&#48;simplesystems&#46;org">glennrp<span>&#64;</span>simplesystems<span>&#46;</span>org</a>&gt;</p>
 <blockquote>
 <ul class="simple">
